project1/tests/p0512.rc
function : bool foo() { return false; }
 function : void bar() { /* do nothing */ }
 function : void main() {
 int x;
 x = x + foo(); // error: bool incompatible with + operator
 x = bar(); // error: void not assignable to int.
 }